<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/btn_normal" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/detail_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:gravity="right"
            android:padding="5dip"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dip"
            android:gravity="center"
            android:padding="5dip"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_normal"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip" >

        <LinearLayout
            android:id="@+id/total_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/total_title"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="10dip" >

            <Button
                android:id="@+id/privious_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:text="@string/privious"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_linear_layout"
        android:layout_below="@id/title_relative_layout"
        android:fadingEdge="vertical"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/main_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <RadioButton
                    android:id="@+id/radio_positive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:drawableRight="@drawable/custom_radio_drawable"
                    android:text="@string/main_radio_title_0"
                    android:textColor="@android:color/black"
                    android:textSize="22dip"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radio_negative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:drawableRight="@drawable/custom_radio_drawable"
                    android:text="@string/main_radio_title_1"
                    android:textColor="@android:color/black"
                    android:textSize="22dip"
                    android:textStyle="bold" />
            </RadioGroup>

            <cn.njfu.ams.CustomListView
                android:id="@+id/checks_list_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:cacheColorHint="#00000000"
                android:padding="5dip"
                android:scrollbars="none"
                android:visibility="gone" />

            <Button
                android:id="@+id/notes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:background="@drawable/btn_normal"
                android:padding="10dip"
                android:text="@string/add_notes"
                android:textColor="@color/white"
                android:textSize="20dip"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/notes_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:hint="@string/edit_notes_hint"
                android:padding="5dip"
                android:textSize="20dip" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>