<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/btn_normal" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/detail_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:gravity="right"
            android:padding="5dip"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dip"
            android:gravity="center"
            android:padding="5dip"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/list_title_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_relative_layout"
        android:background="@drawable/custom_button_default"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/list_title_floor_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:paddingTop="5dip" >

            <TextView
                android:id="@+id/list_title_floor_text_view"
                android:layout_width="110dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/title_all_floor"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:src="@drawable/ic_down_arrow" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/list_title_status_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:clickable="true"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip" >

            <TextView
                android:id="@+id/list_title_status_text_view"
                android:layout_width="110dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/title_all_status"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="10dip"
                android:src="@drawable/ic_down_arrow" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_normal"
        android:orientation="horizontal"
        android:padding="10dip"
         >

        <Button
            android:id="@+id/download_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="20dip"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" />

        <Button
            android:id="@+id/upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textSize="20dip"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/checks_list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_linear_layout"
        android:layout_below="@id/list_title_linear_layout"
        android:layout_marginBottom="10dip"
        android:cacheColorHint="#00000000"
        android:padding="5dip" />

</RelativeLayout>